GUI tweaks in the equipment search tab, naval gauss flag fix