@@ -1,18 +1,22 @@
 /*
-* MegaMek -
-* Copyright (C) 2002, 2003 Ben Mazur (bmazur@sev.org)
-* Copyright (C) 2018 The MegaMek Team
-*
-* This program is free software; you can redistribute it and/or modify it under
-* the terms of the GNU General Public License as published by the Free Software
-* Foundation; either version 2 of the License, or (at your option) any later
-* version.
-*
-* This program is distributed in the hope that it will be useful, but WITHOUT
-* ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
-* FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
-* details.
-*/
+ * Copyright (c) 2002, 2003 Ben Mazur (bmazur@sev.org)
+ * Copyright (c) 2018, 2024 - The MegaMek Team. All Rights Reserved.
+ *
+ * This file is part of MegaMek.
+ *
+ * MegaMek is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * MegaMek is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with MegaMek. If not, see <http://www.gnu.org/licenses/>.
+ */
 package megamek.common;
 
 import java.util.ArrayList;
@@ -21,7 +25,6 @@ import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import megamek.client.ui.advancedsearch.*;
@@ -241,8 +244,7 @@ public class MekSearchFilter {
         }
     }
 
-    private ExpNode createFTFromTokensRecursively(Iterator<FilterToken> toks,
-            ExpNode currNode) {
+    private ExpNode createFTFromTokensRecursively(Iterator<FilterToken> toks, ExpNode currNode) {
         // Base case. We're out of tokens, so we're done.
         if (!toks.hasNext()) {
             return currNode;
@@ -251,15 +253,15 @@ public class MekSearchFilter {
         FilterToken filterTok = toks.next();
 
         // Parsing Parenthesis
-        if (filterTok instanceof ParensFT) {
-            if (((ParensFT) filterTok).parens.equals("(")) {
+        if (filterTok instanceof ParensFT parensFT) {
+            if (parensFT.parens.equals("(")) {
                 if (currNode == null) {
                     return createFTFromTokensRecursively(toks, null);
                 } else {
                     currNode.children.add(createFTFromTokensRecursively(toks, null));
                     return currNode;
                 }
-            } else if (((ParensFT) filterTok).parens.equals(")")) {
+            } else if (parensFT.parens.equals(")")) {
                 ExpNode nextNode = createFTFromTokensRecursively(toks, null);
                 // This right paren is the end of the expression
                 if (nextNode == null) {
@@ -272,8 +274,7 @@ public class MekSearchFilter {
         }
 
         // Parsing an Operation
-        if (filterTok instanceof OperatorFT) {
-            OperatorFT ft = (OperatorFT) filterTok;
+        if (filterTok instanceof OperatorFT ft) {
             ExpNode newNode = new ExpNode();
             // If currNode is null, we came from a right paren
             if (currNode == null) {
@@ -316,23 +317,21 @@ public class MekSearchFilter {
         }
 
         // Parsing an Operand
-        if (filterTok instanceof EquipmentTypeFT) {
+        if (filterTok instanceof EquipmentTypeFT ft) {
             if (currNode == null) {
                 currNode = new ExpNode();
             }
-            EquipmentTypeFT ft = (EquipmentTypeFT) filterTok;
             ExpNode newChild = new ExpNode(ft.internalName, ft.qty);
             currNode.children.add(newChild);
             return createFTFromTokensRecursively(toks, currNode);
 
         }
 
-        if (filterTok instanceof WeaponClassFT) {
+        if (filterTok instanceof WeaponClassFT ft) {
             if (currNode == null) {
                 currNode = new ExpNode();
             }
 
-            WeaponClassFT ft = (WeaponClassFT) filterTok;
             ExpNode newChild = new ExpNode(ft.weaponClass, ft.qty);
             currNode.children.add(newChild);
             return createFTFromTokensRecursively(toks, currNode);
@@ -340,37 +339,8 @@ public class MekSearchFilter {
         return null;
     }
 
-    public void clearEquipmentCriteria() {
-        checkEquipment = false;
-        equipmentCriteria = new ExpressionTree();
-    }
-
     public String getEquipmentExpression() {
         return equipmentCriteria.toString();
-    }
-
-    public static boolean isTechMatch(MekSummary mek, int nTechType) {
-        return ((nTechType == TechConstants.T_ALL)
-                || (nTechType == mek.getType())
-                || ((nTechType == TechConstants.T_IS_TW_ALL)
-                        && ((mek.getType() <= TechConstants.T_IS_TW_NON_BOX)
-                                || (mek.getType() == TechConstants.T_INTRO_BOXSET)))
-                || ((nTechType == TechConstants.T_TW_ALL)
-                        && ((mek.getType() <= TechConstants.T_IS_TW_NON_BOX)
-                                || (mek.getType() <= TechConstants.T_INTRO_BOXSET)
-                                || (mek.getType() <= TechConstants.T_CLAN_TW)))
-                || ((nTechType == TechConstants.T_ALL_IS)
-                        && ((mek.getType() <= TechConstants.T_IS_TW_NON_BOX)
-                                || (mek.getType() == TechConstants.T_INTRO_BOXSET)
-                                || (mek.getType() == TechConstants.T_IS_ADVANCED)
-                                || (mek.getType() == TechConstants.T_IS_EXPERIMENTAL)
-                                || (mek.getType() == TechConstants.T_IS_UNOFFICIAL)))
-                || ((nTechType == TechConstants.T_ALL_CLAN)
-                        && ((mek.getType() == TechConstants.T_CLAN_TW)
-                                || (mek.getType() == TechConstants.T_CLAN_ADVANCED)
-                                || (mek.getType() == TechConstants.T_CLAN_EXPERIMENTAL)
-                                || (mek.getType() == TechConstants.T_CLAN_UNOFFICIAL))));
-
     }
 
     private static boolean isBetween(double value, String sStart, String sEnd) {
@@ -381,11 +351,7 @@ public class MekSearchFilter {
         int iStart = StringUtil.toInt(sStart, Integer.MIN_VALUE);
         int iEnd = StringUtil.toInt(sEnd, Integer.MAX_VALUE);
 
-        if ((value < iStart) || (value > iEnd)) {
-            return false;
-        }
-
-        return true;
+        return (!(value < iStart)) && (!(value > iEnd));
     }
 
     private static boolean isMatch(int i, boolean b) {
@@ -408,10 +374,6 @@ public class MekSearchFilter {
 
     private static boolean anyMatch(List<Integer> list, int search) {
         return list.stream().anyMatch(i -> i == search);
-    }
-
-    private static boolean allMatch(List<Integer> list, int search) {
-        return list.stream().allMatch(i -> i == search);
     }
 
     private static boolean anyMatch(List<Integer> list, HashSet<Integer> search) {
@@ -1007,14 +969,14 @@ public class MekSearchFilter {
                 // First, convert the two separate lists into a map of name->quantity.
                 List<Map.Entry<String, Integer>> nameQtyPairs = IntStream.range(0, Math.min(eq.size(), qty.size()))
                         .mapToObj(i -> Map.entry(eq.get(i), qty.get(i)))
-                        .collect(Collectors.toList());
+                        .toList();
 
                 // Now, stream that map, filtering on a match with the WeaponClass, then extract
                 // the quantities and sum them up.
-                Integer total = nameQtyPairs.stream()
+                int total = nameQtyPairs.stream()
                         .filter(p -> n.weaponClass.matches(p.getKey()))
-                        .map(e -> e.getValue())
-                        .reduce(0, (a, b) -> a + b);
+                        .map(Map.Entry::getValue)
+                        .reduce(0, Integer::sum);
 
                 // If the requested quantity is 0, then we match if and only if the total number
                 // of matching equipment is also 0.
@@ -1066,11 +1028,7 @@ public class MekSearchFilter {
                 // If the leaf quantity is 0, that means that the mek is a match. If the leaf
                 // quantity is non-zero, that means the mek isn't
                 // a match.
-                if (n.qty == 0) {
-                    return true;
-                } else {
-                    return false;
-                }
+                return n.qty == 0;
             }
         }
         // Otherwise, recurse on all the children and either AND the results
@@ -1078,9 +1036,7 @@ public class MekSearchFilter {
         boolean retVal = n.operation == BoolOp.AND;
         // If we set the proper default starting value of retVal, we can take
         // advantage of logical short-circuiting.
-        Iterator<ExpNode> childIter = n.children.iterator();
-        while (childIter.hasNext()) {
-            ExpNode child = childIter.next();
+        for (ExpNode child : n.children) {
             if (n.operation == BoolOp.AND) {
                 retVal = retVal && evaluate(eq, qty, child);
             } else {
@@ -1097,7 +1053,7 @@ public class MekSearchFilter {
      *
      * @author Arlith
      */
-    public class ExpressionTree {
+    public static class ExpressionTree {
         private ExpNode root;
 
         public ExpressionTree() {
@@ -1114,17 +1070,13 @@ public class MekSearchFilter {
             root = new ExpNode(et.root);
         }
 
-        public ExpressionTree(String n, int q) {
-            root = new ExpNode(n, q);
-        }
-
         @Override
         public String toString() {
             return root.children.isEmpty() ? "" : root.toString();
         }
     }
 
-    public class ExpNode {
+    public static class ExpNode {
 
         public ExpNode parent;
         public BoolOp operation;
@@ -1146,14 +1098,14 @@ public class MekSearchFilter {
          */
         public ExpNode(ExpNode e) {
             parent = null;
-            this.operation = e.operation;
-            this.qty = e.qty;
+            operation = e.operation;
+            qty = e.qty;
             // if (e.name != null) {
-            this.name = e.name;
+            name = e.name;
             // }
-            this.weaponClass = e.weaponClass;
+            weaponClass = e.weaponClass;
             Iterator<ExpNode> nodeIter = e.children.iterator();
-            this.children = new LinkedList<>();
+            children = new LinkedList<>();
             while (nodeIter.hasNext()) {
                 children.add(new ExpNode(nodeIter.next()));
             }
@@ -1221,10 +1173,8 @@ public class MekSearchFilter {
 
     }
 
-    public class FilterParsingException extends Exception {
+    public static class FilterParsingException extends Exception {
         public String msg;
-
-        private static final long serialVersionUID = 1L;
 
         FilterParsingException(String m) {
             msg = m;
